--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
         <!--==================== CSS ====================-->
         <link rel="stylesheet" href="assets/css/styles.css">
 
-        <title>HamidReza Attar</title>
+        <title>NasrinAttar</title>
         <link rel="icon" type="image/x-icon" href="assets/img/favicon.png?">
     </head>
     <body>
         <!--==================== HEADER ====================-->
         <header class="header" id="header">
             <nav class="nav container">
-                <a href="#" class="nav__logo">Hamid Reza Fathollahzadeh Attar</a>
+                <a href="#" class="nav__logo">Nasrin Fathollahzadeh Attar</a>
 
                 <div class="nav__menu" id="nav-menu">
                     <ul class="nav__list grid">
@@ -76,17 +76,17 @@
                 <div class="home__container container grid">
                     <div class="home__content grid">
                         <div class="home__social">
-                            <a href="https://www.linkedin.com/in/hamid-reza-fathollahzadeh-attar-6484a11ba/" target="_blank" class="home__social-icon">
+                            <a href="https://www.linkedin.com/in/nasrin-fathollahzadeh-attar/" target="_blank" class="home__social-icon">
                                 <i class="uil uil-linkedin-alt"></i>
                             </a>
 
-                            <a href="https://github.com/HamidRezaAttar" target="_blank" class="home__social-icon">
+                            <a href="https://nasrinattar26.github.io/" target="_blank" class="home__social-icon">
                                 <i class="uil uil-github-alt"></i>
                             </a>
 
-                            <!-- <a href="https://twitter.com" target="_blank" class="home__social-icon">
+                             <a href="https://twitter.com/NasrinAttar" target="_blank" class="home__social-icon">
                                 <i class="uil uil-twitter-alt"></i>
-                            </a> -->
+                            </a> 
                         </div>
 
                         <div class="home__img">
@@ -304,7 +304,7 @@
 
                             <div>
                                 <h3 class="contact__title">Telegram</h3>
-                                <a href="https://t.me/Hamid_Attar" target="_blank" class="contact__subtitle">@nice_phd</a>
+                                <a href="https://t.me/nice_phd" target="_blank" class="contact__subtitle">@nice_phd</a>
                             </div>
                         </div>
 
@@ -313,7 +313,7 @@
 
                             <div>
                                 <h3 class="contact__title">Email</h3>
-                                <a href="mailto:hamidattar5@gmail.com" class="contact__subtitle">nasrin.attar1991@gmail.com</a>
+                                <a href="mailto:nasrin.attar1991@gmail.com" class="contact__subtitle">nasrin.attar1991@gmail.com</a>
                             </div>
                         </div>
 
